--- a/package.json
+++ b/package.json
@@ -22,12 +22,48 @@
     "url": "https://github.com/dogukanucak/ProtoWebJS/issues"
   },
   "homepage": "https://github.com/dogukanucak/ProtoWebJS#readme",
+  "eslintConfig": {
+    "extends": [
+      "eslint-config-prettier"
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "arrowParens": "avoid",
+    "trailingComma": "es5",
+    "printWidth": 120,
+    "tabWidth": 2,
+    "bracketSpacing": false
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/*.ts": [
+      "eslint",
+      "prettier --write",
+      "git add"
+    ]
+  },
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.13.0",
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
-    "tslint": "~6.1.0",
+    "@types/node": "^14.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "es-dev-server": "^1.57.4",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-spellcheck": "0.0.17",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.3.0",
+    "prettier": "^2.1.1",
     "typescript": "~4.0.2"
   }
 }
